--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-hello!
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
+	<script type="text/javascript" src="js/swiper.min.js"></script>
+	<script type="text/javascript" src="js/swiper.animate.min.js"></script>
+	
+</head>
+<body>
+	<div class="swiper-container">
+	  <div class="swiper-wrapper">
+	    <div class="swiper-slide blue-slide">
+		    <div class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容</div>
+	    </div>
+	    <div class="swiper-slide red-slide">
+		    <div class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容</div>
+	    </div>
+	    <div class="swiper-slide orange-slide">
+		    <div class="ani" swiper-animate-effect="shake" swiper-animate-duration="1.5s" swiper-animate-delay="0s">内容</div>
+	    </div>
+	  </div>
+	</div>
+
+
+	<script>        
+	  var mySwiper = new Swiper ('.swiper-container', {
+	  	direction:'vertical',
+		onInit: function(swiper){ //Swiper2.x的初始化是onFirstInit
+		  swiperAnimateCache(swiper); //隐藏动画元素 
+		  swiperAnimate(swiper); //初始化完成开始动画
+		}, 
+		onSlideChangeEnd: function(swiper){ 
+		  swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
+		} 
+	  })        
+	</script>
+</body>
+</html>
