--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <body>
 	<div class="swiper-container">
 	  <div class="swiper-wrapper">
-	    <div class="swiper-slide blue-slide">
-		    <div class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容</div>
+	    <div class="swiper-slide s1">
+		    <div class="ani a1" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
 	    </div>
-	    <div class="swiper-slide red-slide">
-		    <div class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容</div>
+	    <div class="swiper-slide s2">
+		    <div class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容2</div>
 	    </div>
-	    <div class="swiper-slide orange-slide">
-		    <div class="ani" swiper-animate-effect="shake" swiper-animate-duration="1.5s" swiper-animate-delay="0s">内容</div>
+	    <div class="swiper-slide s3">
+		    <div class="ani" swiper-animate-effect="shake" swiper-animate-duration="1.5s" swiper-animate-delay="0s">内容3</div>
 	    </div>
 	  </div>
 	</div>
