--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	    </div>
 	    <div class="swiper-slide s2">
 		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容2</div>
-		    <div class="ani a2" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容2</div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容2</div>
 	    </div>
 	    <div class="swiper-slide s3">
 		    <div class="ani" swiper-animate-effect="shake" swiper-animate-duration="1.5s" swiper-animate-delay="0s">内容3</div>
