--- a/index.html
+++ b/index.html
@@ -21,11 +21,48 @@
 		    <div class="ani a2" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
 	    </div>
 	    <div class="swiper-slide s2">
-		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容2</div>
-		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">内容2</div>
+		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
 	    </div>
 	    <div class="swiper-slide s3">
-		    <div class="ani" swiper-animate-effect="shake" swiper-animate-duration="1.5s" swiper-animate-delay="0s">内容3</div>
+		    <div class="ani a1" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="rollIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+	    </div>
+	    <div class="swiper-slide s4">
+		    <div class="ani a1" swiper-animate-effect="slideInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a3" swiper-animate-effect="flipInX" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+	    </div>
+	    <div class="swiper-slide s5">
+		    <div class="ani a1" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a3" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+	    </div>
+	    <div class="swiper-slide s6">
+		    <div class="ani a1" swiper-animate-effect="slideInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a3" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+	    </div>
+	    <div class="swiper-slide s7">
+		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s"></div>
+		    <div class="ani a3" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.9s"></div>
+	    </div>
+	    <div class="swiper-slide s8">
+		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a3" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+	    </div>
+	    <div class="swiper-slide s9">
+		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+	    </div>
+	    <div class="swiper-slide s10">
+		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a3" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s"></div>
+		    <div class="ani a4" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a5" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.7s"></div>
 	    </div>
 	  </div>
 	</div>
