--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		    <div class="ani a2" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
 	    </div>
 	    <div class="swiper-slide s2">
-		    <div class="ani a1" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
-		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a1" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s"></div>
+		    <div class="ani a2" swiper-animate-effect="bounceInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.4s"></div>
 	    </div>
 	    <div class="swiper-slide s3">
 		    <div class="ani a1" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
@@ -31,7 +31,7 @@
 	    <div class="swiper-slide s4">
 		    <div class="ani a1" swiper-animate-effect="slideInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
 		    <div class="ani a2" swiper-animate-effect="bounceInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
-		    <div class="ani a3" swiper-animate-effect="flipInX" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
+		    <div class="ani a3" swiper-animate-effect="bounceInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
 	    </div>
 	    <div class="swiper-slide s5">
 		    <div class="ani a1" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
