--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <body>
 	<div class="swiper-container">
 	  <div class="arrow"></div>
+	  <div class="sc-yinyue">
+		<div class="yinyue"></div>
+		<audio src="images/music.mp3" id="media" autoplay="" preload="" /></audio>
+	  </div>
+
 	  <div class="swiper-wrapper">
 	    <div class="swiper-slide s1">
 		    <div class="ani a1" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.5s"></div>
@@ -89,5 +94,53 @@
 	 //    }
 	  })        
 	</script>
+	<script>
+		$(function(){
+			$('.sc-yinyue').click(function(){	
+				$("audio").toggleClass("off");
+			})	
+			
+			var audio = document.getElementById('media');  
+			$('.sc-yinyue').click(function(){
+				$(this).toggleClass("off");
+			}) 
+			
+		/*音乐*/
+
+		var audio = $('#media');
+		var isPlaying = false;
+		function playAudio() {
+		    var audio = $('#media');
+		    if (audio.attr('src') == undefined) {
+		        audio.attr('src', audio.data('src'));
+		    }
+		 	audio[0].play();
+		    isPlaying = true;
+		}
+		function pauseAudio(){
+			//ios微信框架固定底部出现偏移
+			setTimeout(function(){
+			$(window).scrollTop(1);
+			},0);
+			audio[0].pause();
+			isPlaying = false;
+		}
+		function audio_switch() {
+		    if (isPlaying) {
+		        //关闭声音
+		        pauseAudio();
+		    }
+		    //开启声音
+		    else {
+		        playAudio();
+		    }
+		}
+		$(function(){
+			playAudio();
+			$(".sc-yinyue").on('click', audio_switch);
+		})
+		})
+	</script>
+
 </body>
 </html>
